modifs sequence eleve/prof

--- a/templates/sequence_eleve.html
+++ b/templates/sequence_eleve.html
@@ -40,6 +40,11 @@
             document.getElementById("desac").hidden = true
         });
 
+        socket.on('fin_seq', ()=>{
+            console.log("fin seq annoncée par le prof")
+            quitter();
+        });
+
         /*function get_responses(){
         li_bonne_rep = document.getElementById("numero_load").innerHTML.split(",");
         for (element in li_bonne_rep){
