--- a/templates/sequence_prof.html
+++ b/templates/sequence_prof.html
@@ -203,6 +203,8 @@
                 <li><a href="../BDD">Liste de vos questions</a></li>
                 <li><a href="../creationQuestion">Créer une question</a></li>
                 <li><a href="../creationFeuille">Créer une feuille d'exercices</a></li>
+                <li><a href="../creationSequence">Créer une séquence</a></li>
+                <li><a href="../controle">Créer des contrôles</a></li>
                 <li><a href="../deco">Se déconnecter</a></li>
             </ul>
         </li>
