--- a/templates/sequence_prof.html
+++ b/templates/sequence_prof.html
@@ -109,7 +109,7 @@
             }
             }
             for (word of Object.keys(words)){
-            document.getElementById("champs_reponses").innerHTML=document.getElementById("champs_reponses").innerHTML+"<span name='"+word+"' style='font-size:"+words[word]*3+"mm;'>"+word+"</span><br>";
+                document.getElementById("champs_reponses").innerHTML=document.getElementById("champs_reponses").innerHTML+"<span name='"+word+"' style='font-size:"+words[word]*2+"mm;float:left; left:0"+Math.random()*100+"px; "+Math.random()*100+"px; position:relative;'>"+word+"</span><br>";
             }
         }
         else{
