--- a/templates/sequence_prof.html
+++ b/templates/sequence_prof.html
@@ -51,7 +51,7 @@
             if(question.question["BREP"].length==0){
                 typeQuest="qso"; //qso pour questionSuperOuverte
             }
-            else if(question.question["BREP"].length==1){
+            else if(question.question["BREP"].length==1 && question.question["REP"].length==0){
                 typeQuest="qo"; //qo pour questionOuverte
             }
             else{
@@ -132,7 +132,7 @@
         else{
             document.getElementById("champs_reponses").innerHTML=""
             for(element of liste_rep_eleve){
-                document.getElementById("champs_reponses").innerHTML=document.getElementById("champs_reponses").innerHTML+"<span>"+element+"</span>";
+                document.getElementById("champs_reponses").innerHTML=document.getElementById("champs_reponses").innerHTML+"<span>"+element+"</span><br>";
             }
         }
     
