--- a/templates/sequence_prof.html
+++ b/templates/sequence_prof.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/styles/atom-one-dark.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/highlight.min.js"></script>
     <script src="../static/load-mathjax.js" async></script>
+    <script src="../static/distEdition.js"></script>
     <title>QuizTio</title>
     <script src="../../static/socket.io.min.js"></script>
     <script>
