--- a/templates/sequence_prof.html
+++ b/templates/sequence_prof.html
@@ -22,7 +22,7 @@
         liste_rep_eleve=[];
         var dicoDesMotsExistants={};
 
-        function prefixe(mot,dicoDesMotsExistants){
+        function prefixe(mot){
             listePrefixe =["in","il","ir","dé","dés","dis","mé","més","mal","mau","contra","contre","non","an","a","am","dys","anti","pré","post","inter","trans","tré","para","super","supra","sur","hyper","hypo","co","con","com","ré","re"]
             Aprefixe = false;
             indice = 0;
