--- a/templates/sequence_prof.html
+++ b/templates/sequence_prof.html
@@ -82,7 +82,7 @@
                     
                 }
                 dicoDesMotsExistants[mot]=1;//Si l'on n'a pas trouver le mot dans le dictionnaire alors on le créé dans le dico
-                return                                
+                return ;                               
             }         
             
         }
