--- a/templates/sequence_eleve.html
+++ b/templates/sequence_eleve.html
@@ -93,7 +93,10 @@
             console.log("envoi de : ", li_Brep_indices)
             socket.emit('eleve_reponse_q', {'id_seq':"{{id_seq| safe}}"},li_Brep_indices);}
             else{
-                socket.emit('eleve_reponse_q', {'id_seq':"{{id_seq| safe}}"},document.getElementById("c_rep").value);
+                //if((!document.getElementById("c_rep").value.includes("<")) || (!document.getElementById("c_rep").value.includes(">"))){
+                    function escapeHtml(text){var map = {'&':'&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&#039;'}; return text.replace(/[&<>"']/g, function(m){return map[m];});}
+                    socket.emit('eleve_reponse_q', {'id_seq':"{{id_seq| safe}}"},escapeHtml(document.getElementById("c_rep").value));
+                //}
             }
         }
         function quitter(){
